[package]
name = "Hyprisland"
version = "0.0.0"
authors = ["u7f8au7fbd <u7f8au7fbd@outlook.com>"]
edition = "2021"

[dependencies]
#EGUI
eframe = { version = "0.28.x" }

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
